src/components/Header/Header.css
.header {
  font-family: Roboto, Inter, sans-serif;
  z-index: 9000;
}

.header--transparent {
  background-color: transparent;
  color: white;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

.header--solid {
  background-color: #ffffff;
  color: black;
  border-bottom: 1px solid rgba(11, 11, 11, 0.2);
}

.header__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 0;
  padding-right: 0;
  padding-top: 19px;
  padding-bottom: 13px;
}

@media screen and (min-width: 380px) and (max-width: 626px) {
  .header__container {
    padding: 16px 0;
  }
}
.header__logo {
  font-size: 20px;
  font-family: "Roboto Slab", Inter, sans-serif;
  font-weight: 700;
  line-height: 24px;
  color: inherit;
}

@media screen and (max-width: 626px) {
  .header__logo {
    font-size: 16px;
  }
}
.header__logo--animate {
  opacity: 0;
  transform: translateY(24px) scale(0.94);
  animation: fadeInScaleDown 0.8s ease-out forwards;
}

@keyframes fadeInScaleDown {
  0% {
    opacity: 0;
    transform: translateY(-24px) scale(0.94);
  }
  100% {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

/* .header__icon-slot {
  display: flex;
  align-items: center;
  margin-left: auto;
} */

.header--transparent .navigation__username {
  color: #fff;
}

.header--solid .navigation__username {
  color: #000;
}

@media (max-width: 379px) {
  .header__container {
    padding: 16px 0;
  }
  .header__logo {
    font-size: 16px;
  }
}

